deploy/dev/shotvl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kwanni-shotvl
  labels:
    app.kubernetes.io/name: kwanni-shotvl
    app.kubernetes.io/part-of: kwanni
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: kwanni-shotvl
  ports:
    - name: http
      port: 8000
      targetPort: http
